[package]
name = "fixed-vec-deque"
version = "0.1.8"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]

description = """
A fixed-size, zero-allocation circular buffer for Rust
"""

documentation = "https://docs.rs/fixed-vec-deque"
homepage = "https://github.com/udoprog/fixed-vec-deque"
repository = "https://github.com/udoprog/fixed-vec-deque"

readme = "README.md"

[features]
unstable = []
