[package]
name = "fixed-vec-deque"
version = "0.1.9"
authors = ["John-John Tedro <udoprog@tedro.se>"]
description = "A fixed-size, zero-allocation circular buffer for Rust."
documentation = "https://docs.rs/fixed-vec-deque"
readme = "README.md"
homepage = "https://github.com/udoprog/fixed-vec-deque"
repository = "https://github.com/udoprog/fixed-vec-deque"
license = "MIT/Apache-2.0"
keywords = ["data-structures"]
categories = ["data-structures"]

[features]
unstable = []
